[gd_scene load_steps=2 format=2]

[ext_resource path="res://LevelBrowser/CustomLevels/CustomLevels.gd" type="Script" id=1]

[node name="CustomLevels" type="Node2D"]
script = ExtResource( 1 )

[node name="LevelSelectButton" type="Button" parent="."]
margin_left = 12.0
margin_top = 12.0
margin_right = 180.0
margin_bottom = 36.0
text = "Return to level select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="."]
margin_left = 204.0
margin_top = 12.0
margin_right = 276.0
margin_bottom = 36.0
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImportHelpButton" type="Button" parent="."]
margin_left = 300.0
margin_top = 12.0
margin_right = 480.0
margin_bottom = 36.0
text = "Help on importing levels"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RefreshButton" type="Button" parent="."]
margin_left = 504.0
margin_top = 12.0
margin_right = 576.0
margin_bottom = 36.0
text = "Refresh"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImportHelpPanel" type="PopupPanel" parent="."]
margin_left = 336.0
margin_top = 144.0
margin_right = 720.0
margin_bottom = 336.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="ImportHelpPanel"]
margin_right = 384.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitImportHelp" type="HBoxContainer" parent="ImportHelpPanel/Control"]
margin_left = 360.0
margin_right = 384.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ImportHelpPanel/Control/ExitImportHelp"]
margin_right = 20.0
margin_bottom = 24.0
text = "X"

[node name="ImportHelpHeader" type="VBoxContainer" parent="ImportHelpPanel/Control"]
margin_left = 36.0
margin_right = 348.0
margin_bottom = 36.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ImportHelpPanel/Control/ImportHelpHeader"]
margin_top = 11.0
margin_right = 312.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Help"
align = 1
valign = 1

[node name="ImportHelpText" type="VBoxContainer" parent="ImportHelpPanel/Control"]
margin_left = 24.0
margin_top = 36.0
margin_right = 360.0
margin_bottom = 168.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ImportHelpPanel/Control/ImportHelpText"]
margin_right = 336.0
margin_bottom = 99.0
text = "In order to import custom levels to play here, you should create a new folder called \"CustomLevels\" in the same folder where you installed the game. To make sure your custom level pack gets recognized by the game, follow the instructions in the custom_levels.txt file accompanied with the game."
align = 1
autowrap = true

[node name="CustomLevelList" type="Node2D" parent="."]

[node name="VScrollBar" type="VScrollBar" parent="CustomLevelList"]
margin_left = 12.0
margin_top = 48.0
margin_right = 864.0
margin_bottom = 552.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CustomLevelList/VScrollBar"]
margin_right = 852.0
margin_bottom = 528.0
color = Color( 0.501961, 0.501961, 0.501961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]
[connection signal="pressed" from="ImportHelpButton" to="." method="_on_ImportHelpButton_pressed"]
[connection signal="pressed" from="ImportHelpPanel/Control/ExitImportHelp/Button" to="." method="_on_ExitImportHelpButton_pressed"]
